Start Screen Done

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   <script type="text/javascript" src="js/hand2.js"></script>
   <script type="text/javascript" src="js/hand1.js"></script>
   <script type="text/javascript" src="js/game.js"></script>
-
+  <script type="text/javascript" src="js/arrow.js"></script>
+  <script type="text/javascript" src="js/mode.js"></script>
+  <script type="text/javascript" src="js/main.js"></script>
   <script type="text/javascript" src="js/index.js"></script>
 
   <link rel="stylesheet" type="text/css" href="css/styles.css">
