--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 
   <!-- IMPORTANTE EL ORDEN -->
   <!-- Si un objeto necesita otro, incluirlo antes -->
+  <script type="text/javascript" src="js/audio.js"></script>
   <script type="text/javascript" src="js/background.js"></script>
   <script type="text/javascript" src="js/ball.js"></script>
-  <script type="text/javascript" src="js/hand2.js"></script>
-  <script type="text/javascript" src="js/hand1.js"></script>
+  <script type="text/javascript" src="js/hand.js"></script>
   <script type="text/javascript" src="js/game.js"></script>
   <script type="text/javascript" src="js/arrow.js"></script>
   <script type="text/javascript" src="js/mode.js"></script>
